@@ -1,5 +1,6 @@
 Changes in 1.0.4:
 - Fix race condition causing timers not to be removed in the µTP code, resulting in a crash (251117)
+- Fix deadlock in µTP code caused by keeping a mutex lock longer then necessary
 
 Changes in 1.0.3:
 - Fix crash in HTTPAnnounceJob due to abort call (244198)
